[project]
name = "dqn-minesweeper"
version = "0.1.0"
description = ""
authors = [
    { name = "TabitoSaito", email = "domi2601.hoelzl@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<3.15"

dependencies = [
    "torch>=2.9.1,<3.0.0",
    "tqdm>=4.67.1,<5.0.0",
    "matplotlib>=3.10.8,<4.0.0",
    "optuna>=4.6.0,<5.0.0",
    "optuna-dashboard>=0.20.0,<0.21.0",
    "pygame>=2.6.1,<3.0.0",
    "gymnasium>=1.2.2,<2.0.0",
    "opencv-python (>=4.12.0.88,<5.0.0.0)"
]

packages = [
    { include = "dqn_minesweeper", from = "src" }
]

[tool.poetry.scripts]
main = "dqn_minesweeper.main:main"
dashboard = "dqn_minesweeper.dashboard:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
